COMMERCE-6188 number of users for account
