# modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
@@ -42,6 +42,11 @@ components:
                     type: integer
                 name:
                     type: string
+                numberOfUsers:
+                    description:
+                        The number of this account's associated users.
+                    readOnly: true
+                    type: integer
                 organizationIds:
                     items:
                         format: int64
